@@ -126,6 +126,11 @@ Contributors:
 - Nai-Yuan Chiang and Victor M. Zavala Tejeda (Argonne National Laboratory)
   inertia free curvature test in solution of primal-dual system (full approach)
 
+- Brad Bell
+  recursive NLP example
+  
+  examples/recursive_nlp/recursive_nlp.cpp
+
 Contributors of code that is no longer included in Ipopt distribution:
 
 - Yifan Hu (Wolfram): Contributed TAUCS interface, implemented in the files
